Adjusted project summary, the whole page scale, and added scroll to mainview when a project is clicked

--- a/boilerplate/assets/css/main.css
+++ b/boilerplate/assets/css/main.css
@@ -2650,7 +2650,13 @@ input, select, textarea {
 .project{
 	transition-duration: 1s;
 }
+#projects{
+	padding-top:10px;
+}
 
+body{
+	zoom:0.75;
+}
 /* When expanded, enlarge the image */
 
 .project_button{
